# chop

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: research_notes.md
examples/: README.md  __init__.py  assignment_example.py  benchmark_all.py  benchmark_example.py  benchmark_visualization.py  bin_packing_example.py  binpacking_baseline_check.py  eval_generalization.py  knapsack_example.py  problem_instances.py  rl_branch_and_bound_example.py  rl_env_smoke_test.py  rl_environment_visualization_test.py  set_cover_example.py  setcover_baseline_check.py  simple_ilp.py  train_imitation_then_rl.py  train_multitask.py  train_reinforce.py  train_setcover.py  tsp_example.py
src/: .gitignore  __init__.py  bnb.py  branch_and_bound.py  branch_and_bound_tree.dot  exceptions.py  linear_program.py  parser.py  pivoting.py  research.ipynb  simplex.py  tsp.py  tsp_bnb_demo.ipynb
src/agents/: README.md  __init__.py  bipartite_attention_policy.py  bipartite_gnn_policy.py  ensemble_policy.py  gnn_policy.py  hybrid_policy.py  imitation.py  policy.py  ppo.py  reinforce.py  transformer_policy.py  tree_gnn_policy.py
src/benchmarking/: README.md  __init__.py  metrics.py  runner.py  suite.py
src/core/: __init__.py  node.py  priority_queue.py  solver.py
src/environments/: README.md  __init__.py  branch_and_bound_env.py
src/logs/: branch_and_bound_output.txt
src/problems/: README.md  __init__.py  assignment.py  base.py  bin_packing.py  knapsack.py  set_cover.py  tsp.py
src/saved_graphs/: graph_0_1729049866517.pt  (+58 more)
tests/: README.md  test_smoke.py
(+6 files in other folders)
